[project]
name = "FLK"
version = "0.0.1"
authors = [
  { name="Enrico Martini", email="enrico.martini@univr.it" },
]
description = "a Filter with Learned Kinematics for Real-time 3D Human Pose Estimation"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/PARCO-LAB/FLK"
Issues = "https://github.com/PARCO-LAB/FLK/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["FLK"]